            * The functions :
                - get_function_field_verbose_name.
                - get_related_field_verbose_name.
                - filter_entities_on_ct.
                - get_fk_entity.
                - get_m2m_entities.
                - _get_entity_column.
        # Apps :
            * Activities :
                - The field ActivityType.color has been removed.
            * Media_managers :
                - ImageM2MWidget has been removed.
            * Billing :
                - The Vat model has been moved to creme_core.
            * Reports :
                * About the reports.Field model :
                    - The field 'report' has been renamed to 'sub_report'.
                    - The field 'title' has been removed.
                    - A new ForeignKey field 'report' has been added in order to replace the field Report.columns (ManyToManyField).
                * Several useless templatetags were removed :
                    - get_report_chart.
                    - get_report_chart_selectors.
                    - verbose_abscissa.
                    - verbose_ordinate.



== Version 1.3 ==

  Users side :
  ------------
    # Form widgets improvements :
        * New selector widgets, that can also create instances (and automatically
          select the newly created instances).
            - For small models, like persons.Sector or billing.InvoiceStatus (used almost everywhere).
            - For Entities, like the Document chosen in the CSV import (used only in a few places).
        * Auto-completion (thanks to chosen.js) in some widgets (Relationships creators).
        * Cache system used by some widgets (Relationships creators, Entities selectors).
    # New feature : Trash, that contains deleted Entities. These entities are generally not displayed (in list views for example), they have a different detailview, and can be definitively deleted.
    # Credentials improvements: